--- a/contact.html
+++ b/contact.html
@@ -80,107 +80,91 @@
         <div class="page-title ">
             <div class="container">
                 <div class="page-title__content text-center">
-                    <h2 class="wow shake">Now Book Table </h2>
+                    <h2 class="wow shake">Contact</h2>
                     <ul>
                         <li>
-                            <a href="">Home <i class="fas fa-chevron-right"></i> </a>
+                            <a href="index.html">Home <i class="fas fa-chevron-right"></i> </a>
                         </li>
-                        <li>Book Table</li>
+                        <li>Contact</li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-    <!--Book Table-->
-    <div class=" book-table-main book-table">
-        <div class="book-table__form">
-            <div class="container">
-                <div class="book-table__form--bookForm text-center">
-                    <div class="book-form-wrap">
-                        <h3>Reserve your table for next lunch</h3>
-                        <form>
-                            <div class="row">
-                                <div class="col-lg-6 col-md-6">
-                                    <div class="form-group">
-                                        <select name="select" id="select">
-                                            <option selected class="2">Number Of People</option>
-                                            <option value="1 ">1</option>
-                                            <option value="2 ">2</option>
-                                            <option value="3 ">3</option>
-                                            <option value="4 ">4</option>
-                                            <option value="5 ">5</option>
-                                            <option value="10 ">10</option>
-                                            <option value="15 ">15</option>
-                                            <option value="20 ">20</option>
-                                            <option value="25 ">25</option>
-                                        </select>
-                                        <span class="input-group-addon">
-                                            <i class="fas fa-user"></i>
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 col-md-6">
-                                    <div class="form-group">
-                                        <input size="16" type="text" class="form-control" id="datetime" placeholder="Date & Time" value="Date & Time" readonly>
-                                        <!--js datetime-->
-                                        <script type="text/javascript">
-                                            $("#datetime").datetimepicker({
-                                                format: 'mm-dd-yyyy hh:ii'
-                                            });
-                                        </script>
-                                        <!--END js__datetime-->
-                                        <span class="input-group-addon clock">
-                                            <i class="far fa-clock "></i>
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 col-md-6">
-                                    <div class="form-group">
-                                        <select name="select" id="select">
-                                            <option selected class="2">Number Of Table</option>
-                                            <option value="1 ">1</option>
-                                            <option value="2 ">2</option>
-                                            <option value="3 ">3</option>
-                                            <option value="4 ">4</option>
-                                            <option value="5 ">5</option>
-                                            <option value="6 ">10</option>
-                                            <option value="7">15</option>
-                                            <option value="8">20</option>
-                                            <option value="9">25</option>
-                                        </select>
-                                        <span class="input-group-addon users">
-                                            <i class="fas fa-users"></i>
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="col-lg-6 col-md-6">
-                                    <div class="form-group">
-                                        <input type="text" placeholder="Number Phone">
-                                        <span class="input-group-addon phone">
-                                            <i class="fas fa-phone"></i>
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <textarea name="message " id="message " placeholder="Your Message " rows="6 "></textarea>
-                                        <span class="input-group-addon text-file">
-                                            <i class="far fa-file-alt"></i>
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-4 col-sm-6 offset-sm-3 offset-md-4 offset-lg-4">
-                                    <button type="submit" class="default-btn wow shake">FIND A TABLE</button>
+    <!--Start Contact-->
+    <section class="contact">
+        <div class="container">
+            <div class="section-title text-center">
+                <h2 class="wow flipInX">
+                    Drop us message for any query
+                </h2>
+                <img src="./img/shape-1.png">
+                <p>
+                    If you have an idea, we would love to hear about it.
+                </p>
+            </div>
+
+            <div class="row">
+                <div class="col-lg-7 col-md-12">
+                    <div class="contact__form">
+                        <div class="row">
+                            <div class="col-lg-6 col-sm-6">
+                                <input type="text" placeholder="Your Name " class="form-group">
+                            </div>
+                            <div class="col-lg-6 col-sm-6">
+                                <input type="text" placeholder="Your Email" class="form-group">
+                            </div>
+                            <div class="col-lg-6 col-sm-6">
+                                <input type="text" placeholder="Your Phone" class="form-group">
+                            </div>
+                            <div class="col-lg-6 col-sm-6">
+                                <input type="text" placeholder="Your Subject" class="form-group">
+                            </div>
+                            <div class="col-lg-12 col-sm-12">
+                                <div class="form-group">
+                                    <textarea name="message " id="message " placeholder="Your Message " rows="6 "></textarea>
                                 </div>
                             </div>
-                        </form>
+                        </div>
                     </div>
+                </div>
+                <div class="col-lg-5 col-md-12">
+                    <div class="contact__info">
+                        <ul>
+                            <li>
+                                <div class="contact__info--icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                </div>
+                                <span>Address</span> 44 Canal Center Plaza #200, Alexandria, VA 22314, USA
+
+                            </li>
+                            <li>
+                                <div class="contact__info--icon">
+                                    <i class="fas fa-envelope"></i>
+                                </div>
+                                <span>Email</span>
+                                <a href=""> Jr9876@gmail.com</a>
+                                <a href=""> Jr5432@icloud.com</a>
+                            </li>
+                            <li>
+                                <div class="contact__info--icon">
+                                    <i class="fas fa-phone"></i>
+                                </div>
+                                <span>Phone</span>
+                                <a href="">+ 1900 – 123 456 78</a>
+                                <a href="">+ 84 987 - 654 - 321 </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 offset-sm-3 offset-md-4 offset-lg-4">
+                    <button type="submit" class="default-btn wow shake">FIND A TABLE</button>
                 </div>
             </div>
         </div>
-    </div>
 
-    <!--End Book-Table-->
+    </section>
+    <!--End Contact-->
     <!--Footer-->
     <footer class="footer">
         <div class="container">
@@ -316,8 +300,8 @@
     <div class="navigation">
         <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
         <label for="navi-toggle" class="navigation__button">
-        <span class="navigation__icon">&nbsp;</span>
-    </label>
+            <span class="navigation__icon">&nbsp;</span>
+        </label>
         <div class="navigation__background">&nbsp;</div>
         <div class="navigation__nav">
             <ul class="navigation__list">
@@ -344,6 +328,7 @@
     <script>
         new WOW().init();
     </script>
+
     <!-- script for coutup number -->
     <script src="./vendors/Waypoints/jquery.waypoints.min.js "></script>
     <script src="./vendors/counterup/inview.min.js "></script>
